3.1 updates
