# ch8-viewsets-and-routers/blog_project/urls.py
@@ -1,11 +1,0 @@
-from django.contrib import admin
-from django.urls import include, path
-
-
-urlpatterns = [
-    path('admin/', admin.site.urls),
-    path('api/v1/', include('posts.urls')),
-    path('api-auth/', include('rest_framework.urls')),
-    path('api/v1/dj-rest-auth/', include('dj_rest_auth.urls')), 
-    path('api/v1/dj-rest-auth/registration/', include('dj_rest_auth.registration.urls')),
-]
